--- a/LeckerBag/WebContent/10_lieferant_stornierungen_alle.html
+++ b/LeckerBag/WebContent/10_lieferant_stornierungen_alle.html
@@ -99,14 +99,11 @@
                                                         </th>
                                                         <th>Zusatzinformation
                                                             <br>
-                                                        </th>
-                                                        <th>Spende
-                                                            <br>
                                                         </th>                                                         
                                                     </tr>                                                     
                                                 </thead>                                                 
                                                 <tbody> 
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Max Musterman</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -117,10 +114,9 @@
                                                         <td>Bernadette Mustermann</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Kind ist krank</td>
-                                                        <td>ja</td>                                                         
+                                                        <td>Kind ist krank</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Max Musterman</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -131,10 +127,9 @@
                                                         <td>Arnold Mustermann</td>
                                                         <td>01.09.15</td>
                                                         <td>Röntgen Gymnasium</td>
-                                                        <td>Kind ist krank</td>
-                                                        <td>ja</td>                                                         
+                                                        <td>Kind ist krank</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -145,10 +140,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -159,10 +153,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Max Musterman</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -173,10 +166,9 @@
                                                         <td>Arnold Mustermann</td>
                                                         <td>01.09.15</td>
                                                         <td>Röntgen Gymnasium</td>
-                                                        <td>Kind ist krank</td>
-                                                        <td>ja</td>                                                         
+                                                        <td>Kind ist krank</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -187,10 +179,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -201,10 +192,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -215,10 +205,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Max Musterman</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -229,10 +218,9 @@
                                                         <td>Arnold Mustermann</td>
                                                         <td>01.09.15</td>
                                                         <td>Röntgen Gymnasium</td>
-                                                        <td>Kind ist krank</td>
-                                                        <td>ja</td>                                                         
+                                                        <td>Kind ist krank</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -243,10 +231,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -257,10 +244,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -271,10 +257,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -285,10 +270,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -299,10 +283,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -313,10 +296,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -327,10 +309,9 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr> 
                                                         <td>Bob Brown</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -341,8 +322,7 @@
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>                                                     
                                                 </tbody>
                                             </table>
