--- a/LeckerBag/WebContent/dashboard_kunde.html
+++ b/LeckerBag/WebContent/dashboard_kunde.html
@@ -258,22 +258,22 @@
         		function(Y) {
         			var events = [
         			    {
-        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652001</a> Brötchen mit Salami, Apfel, Milch <br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
+        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652001</a> Brötchen mit Salami, Apfel, Milch <br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo" onclick="location.href=&#39;4_stornierung_bag.html&#39;">stornieren</button>',
         					endDate: new Date(2015, 8, 1, 10,15),
         					startDate: new Date(2015, 8, 1, 9,45)
         			    },
         			    {
-        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652011</a> Mehrkornbrötchen mit Käse, Birne, Kakao&nbsp;<br> <font class="beschreibung">Kind: </font> <a>Bernadette Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
+        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652011</a> Mehrkornbrötchen mit Käse, Birne, Kakao&nbsp;<br> <font class="beschreibung">Kind: </font> <a>Bernadette Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo" onclick="location.href=&#39;4_stornierung_bag.html&#39;">stornieren</button>',
         					endDate: new Date(2015, 8, 1, 10,00),
         					startDate: new Date(2015, 8, 1, 9,30)
         			    },
         			    {
-        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652011</a> Mehrkornbrötchen mit Käse, Birne, Kakao&nbsp;<br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
+        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652011</a> Mehrkornbrötchen mit Käse, Birne, Kakao&nbsp;<br> <font class="beschreibung">Kind: </font> <a>Arnold Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>01.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo" onclick="location.href=&#39;4_stornierung_bag.html&#39;">stornieren</button>',
         					endDate: new Date(2015, 8, 2, 10,00),
         					startDate: new Date(2015, 8, 2, 9,30)
         			    },
         			    {
-        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652002</a> Brötchen mit Schinken und Käse, Banane, Milch <br> <font class="beschreibung">Kind: </font> <a>Bernadette Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>02.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo">stornieren</button>',
+        					content: '<p color="#5b586b"><font class="beschreibung">Produkt:</font> <a>100652002</a> Brötchen mit Schinken und Käse, Banane, Milch <br> <font class="beschreibung">Kind: </font> <a>Bernadette Mustermann</a> <br> <font class="beschreibung">Lieferdatum: </font>02.09.15<br>(<a href="3_details_bestellung.html">Bestelldetails</a>)</p></br><button type="button" class="btn btn-default button_paulo" onclick="location.href=&#39;4_stornierung_bag.html&#39;">stornieren</button>',
         					endDate: new Date(2015, 8, 2, 10,15),
         					startDate: new Date(2015, 8, 2, 9,30)
         			    },
