--- a/LeckerBag/WebContent/dashboard_lieferant.html
+++ b/LeckerBag/WebContent/dashboard_lieferant.html
@@ -221,7 +221,7 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                             </div>
                         </div>
                     </div>
-                    <div class="row" id="meine_stornierungen" style="display:" data-pg-collapsed>
+                    <div class="row" id="meine_stornierungen" style="display:">
                         <div class="col-sm-12 col-xs-12 dash_element_col col-md-12 col-lg-12">
                             <div class="row dash_element_holder">
                                 <div class="col-md-12 dash_element"> 
@@ -250,14 +250,11 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                                                         </th>
                                                         <th>Zusatzinformation
                                                             <br>
-                                                        </th>
-                                                        <th>
-                                                            <br>
                                                         </th>                                                         
                                                     </tr>                                                     
                                                 </thead>                                                 
                                                 <tbody> 
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr data-pg-collapsed> 
                                                         <td>Max Musterman</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -268,10 +265,9 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                                                         <td>Arnold Mustermann</td>
                                                         <td>01.09.15</td>
                                                         <td>Röntgen Gymnasium</td>
-                                                        <td>Kind ist krank</td>
-                                                        <td>ja</td>                                                         
+                                                        <td>Kind ist krank</td>                                                         
                                                     </tr>
-                                                    <tr data-pg-collapsed=""> 
+                                                    <tr> 
                                                         <td>Max Musterman</td>                                                         
                                                         <td>
                                                             <a href="#">10060321</a>
@@ -282,8 +278,7 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                                                         <td>Bernadette Mustermann</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Kind ist krank</td>
-                                                        <td>ja</td>                                                         
+                                                        <td>Kind ist krank</td>                                                         
                                                     </tr>
                                                     <tr data-pg-collapsed=""> 
                                                         <td>Bob Brown</td>                                                         
@@ -296,8 +291,7 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                                                         <td>Mikael Brown</td>
                                                         <td>01.09.15</td>
                                                         <td>Grundschule Süd</td>
-                                                        <td>Bag wird abgeholt</td>
-                                                        <td>nein</td>                                                         
+                                                        <td>Bag wird abgeholt</td>                                                         
                                                     </tr>                                                     
                                                 </tbody>
                                             </table>
@@ -427,7 +421,7 @@ Ich kann über Müllerbäck nichts schlechtes berichten.
                                     <div class="row last_element_dash">
                                         <hr class="hr_line hr_line_ext_dashboard_last">
                                         <div class="col-md-12">
-                                            <a>Alle Abonnements anzeigen</a>
+                                            <a href="11_lieferant_bestellungen_alle.html">Alle Abonnements anzeigen</a>
                                         </div>
                                     </div>
                                 </div>
