--- a/LeckerBag/WebContent/1_details_abo.html
+++ b/LeckerBag/WebContent/1_details_abo.html
@@ -7,16 +7,14 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
+        <link href="css/bootstrap.css" rel="stylesheet">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>         
+        <link href="css/bootstrap-responsive.css" rel="stylesheet">
+        <script src="js/jquery.js"></script>         
         <script> 
 			$(function(){
-		        $("#header").load("header.html", function(){
-		        	setNav(2);
-		        });
-			  	$("#footer").load("footer.html"); 
+			  $("#header").load("header.html"); 
+			  $("#footer").load("footer.html"); 
 			});
 		</script>         
     </head>     
@@ -55,14 +53,14 @@
                                             <div class="row" style="margin-bottom: 15px">
                                                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                                     <h4>Details zum Abonnement</h4>
-                                                    <p>Modell: 30 Tage Abonnement<br></p>
-                                                    <p>Bestelldatum: 01.09.1015<br></p>
-                                                    <p>Startdatum: 01.10.2015<br></p>
+                                                    <p>Modell: 7 Tage Abonnement<br></p>
+                                                    <p>Bestelldatum: 27.04.1015<br></p>
+                                                    <p>Startdatum: 04.05.2015<br></p>
                                                     <p>Kosten: 24,50 €<br></p>
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                                     <h4>Details zum Kunden</h4> 
-                                                    <p>Name Max Mustermann<br></p>
+                                                    <p>Name Maria Müller<br></p>
                                                     <p>Straße: Weingartenstraße 31<br></p>
                                                     <p>Postleitzahl: 97072 Würzburg<br></p>
                                                 </div>
@@ -70,13 +68,13 @@
                                             <div class="row">
                                                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                                     <h4>Details zum Lieferanten</h4> 
-                                                    <p>Name: Rösner Backstube<br></p>
+                                                    <p>Name: Bäcker Bob<br></p>
                                                     <p>Straße: Sanderstraße 12<br></p>
                                                     <p>Postleitzahl: 97072 Würzburg<br></p>
                                                 </div>
                                                 <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
                                                     <h4>Details zum Kind</h4> 
-                                                    <p>Name: Arnold Mustermann<br></p>
+                                                    <p>Name: Hans-Jürgen<br></p>
                                                     <p>Schule: Gebrüder Grimm Schule<br></p>
                                                     <p>Klasse: 2a<br></p>
                                                 </div>
@@ -92,7 +90,7 @@
                                                     <i class="fa fa-info-circle fa-lg logo_info"></i> 
                                                 </div>
                                                 <div class="col-md-11 col-lg-11 col-sm-11 col-xs-11">
-                                                    <p>Das Abonnement kann noch bis zum 15.09.2015 storniert werden.<br></p> 
+                                                    <p>Das Abonnement kann noch bis zum 29.04.2015 storniert werden.<br></p> 
                                                 </div>
                                             </div>
                                             <div class="row text-left" style="margin-top: 30px">
@@ -122,7 +120,7 @@
                                                 <strong><strong><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 1: 04.09.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 1: 04.05.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -139,7 +137,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 2: 05.09.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 2: 05.05.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -156,7 +154,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 3: 06.09.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 3: 06.05.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -173,7 +171,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 4: 07.09.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 4: 07.05.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -190,7 +188,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 5: 14.09.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 5: 14.05.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -207,7 +205,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 6: 15.09.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 6: 15.05.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -224,7 +222,7 @@
                                                         </div><div class="col-md-12 col-sm-12 col-xs-12 col-lg-12 abo_border_bottom abo_border abo_color" style="margin-top: 10px; ">
                                                             <div class="row">
                                                                 <div class="col-md-9 col-lg-9">
-                                                                    <p style="margin-top: 25px">Tag 7: 16.09.2015<br></p>
+                                                                    <p style="margin-top: 25px">Tag 7: 16.05.2015<br></p>
                                                                     <p>Brötchen: Mehrkornbrötchen...<br></p>
                                                                     <p>Obst: Apfel<br></p>
                                                                     <p>Getränk: Wasser<br></p>
@@ -258,7 +256,14 @@
         </div>         
         <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
+        <script>
+	        $("#header").load("header.html", function(){
+	        	setNav(2);
+	        });
+        </script>         
+        <!-- Ende des Dokumentes -->         
+        <script src="js/jquery.js"></script>         
+        <script src="js/bootstrap.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
 </html>
