--- a/LeckerBag/WebContent/2_uebersicht_abo.html
+++ b/LeckerBag/WebContent/2_uebersicht_abo.html
@@ -7,16 +7,14 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">      
+        <link href="css/bootstrap.css" rel="stylesheet">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>        
+        <link href="css/bootstrap-responsive.css" rel="stylesheet">
+        <script src="js/jquery.js"></script>         
         <script> 
 			$(function(){
-		        $("#header").load("header.html", function(){
-		        	setNav(2);
-		        });
-			  	$("#footer").load("footer.html"); 
+			  $("#header").load("header.html"); 
+			  $("#footer").load("footer.html"); 
 			});
 		</script>         
     </head>     
@@ -63,8 +61,8 @@
                         <div class="col-xs-12 col-md-4 col-lg-4 col-sm-4">
                             <h4>Kinder<br></h4>
                             <select class="form-control">
-                                <option>Arnold Mustermann</option>
-                                <option>Bernadette Mustermann</option>                                 
+                                <option>Hans-Jürgen</option>
+                                <option>Peter</option>                                 
                             </select>
                             <div class="clearfix clear-columns"></div>
                         </div>
@@ -78,11 +76,11 @@
                                             <div class="row border_abo abo_border abo_color" data-pg-collapsed>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
-                                                    <a>Arnold Mustermann</a>
+                                                    <a>Hans-Jürgen</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
-                                                    <a>Rösner Backstube</a>
+                                                    <a>Bäcker Bob</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
@@ -101,7 +99,7 @@
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='6_rezension_abo.html'">Bewerten</button>
                                                 </div>
                                                 <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
-                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='5_stornierung_abo.html'">Stornieren</button>
+                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='5_stornierung_abo.html'">Kündigen</button>
                                                 </div>
                                                 <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12" style="margin-top: 15px">
                                                     <i class="fa fa-star logo_info fa-lg"></i>
@@ -118,11 +116,11 @@
                                             <div class="row border_abo abo_border abo_color" data-pg-collapsed>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
-                                                    <a>Arnold Mustermann</a>
+                                                    <a>Hans-Jürgen</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
-                                                    <a>Rösner Backstube</a>
+                                                    <a>Bäcker Bob</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
@@ -141,7 +139,7 @@
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='6_rezension_abo.html'">Bewerten</button>
                                                 </div>
                                                 <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
-                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='5_stornierung_abo.html'">Stornieren</button>
+                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='5_stornierung_abo.html'">Kündigen</button>
                                                 </div>
                                                 <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12" style="margin-top: 15px">
                                                     <i class="fa fa-star logo_info fa-lg"></i>
@@ -158,11 +156,11 @@
                                             <div class="row border_abo abo_border abo_color" data-pg-collapsed>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Kind<br></h4>
-                                                    <a>Arnold Mustermann</a>
+                                                    <a>Hans-Jürgen</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Lieferant<br></h4>
-                                                    <a>Rösner Backstube</a>
+                                                    <a>Bäcker Bob</a>
                                                 </div>
                                                 <div class="col-sm-6 col-xs-6 col-md-3 col-lg-3" data-pg-collapsed="">
                                                     <h4>Bestelldatum<br></h4>
@@ -181,7 +179,7 @@
                                                     <button type="button" class="btn btn-default button_paulo" onclick="location.href='6_rezension_abo.html'">Bewerten</button>
                                                 </div>
                                                 <div class="col-md-3 col-lg-3 text-left col-xs-12 col-sm-12">
-                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='5_stornierung_abo.html'">Stornieren</button>
+                                                    <button type="button" class="btn btn-default button_paulo" onclick="location.href='5_stornierung_abo.html'">Kündigen</button>
                                                 </div>
                                                 <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12" style="margin-top: 15px">
                                                     <i class="fa fa-star logo_info fa-lg"></i>
@@ -200,9 +198,15 @@
                 </div>                 
             </div>
         </div>         
-        <div class="row" id="footer"></div>                       
+        <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
+        <script>
+	        $("#header").load("header.html", function(){
+	        	setNav(2);
+	        });
+        </script>         
+        <!-- Ende des Dokumentes -->         
+        <script src="js/bootstrap.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
 </html>
