--- a/LeckerBag/WebContent/3_details_bestellung.html
+++ b/LeckerBag/WebContent/3_details_bestellung.html
@@ -7,16 +7,14 @@
         <meta name="description" content="Beschreibung der Seite">         
         <meta name="author" content="Paul Kozakiewicz">         
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">         
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">         
+        <link href="css/bootstrap.css" rel="stylesheet">         
         <link href="css/style.css" rel="stylesheet" type="text/css">         
-        <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,900,500' rel='stylesheet' type='text/css'>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>         
+        <link href="css/bootstrap-responsive.css" rel="stylesheet">         
+        <script src="js/jquery.js"></script>         
         <script> 
 			$(function(){
-		        $("#header").load("header.html", function(){
-		        	setNav(2);
-		        });
-			  	$("#footer").load("footer.html"); 
+			  $("#header").load("header.html"); 
+			  $("#footer").load("footer.html"); 
 			});
 		</script>         
     </head>     
@@ -100,7 +98,7 @@
                                             <p>Fett: 22g<br></p>
                                         </div>
                                         <div class="col-md-3 col-lg-3 col-sm-6 col-xs-12 text-center">
-                                            <img src="pics/torte.gif" height="150" width="150">                                             
+                                            <img src="file:///C:/Users/mpost/Desktop/url.gif" height="150" width="150">                                             
                                         </div>
                                     </div>
                                     <div class="row" style="margin-bottom: 25px">
@@ -137,7 +135,14 @@
         </div>         
         <div class="row" id="footer"></div>         
         <!-- Ende des Dokumentes -->         
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>         
+        <script>
+	        $("#header").load("header.html", function(){
+	        	setNav(2);
+	        });
+        </script>         
+        <!-- Ende des Dokumentes -->         
+        <script src="js/jquery.js"></script>         
+        <script src="js/bootstrap.js"></script>         
         <script src="js/functions.js"></script>         
     </body>     
 </html>
